--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,54 @@
     padding: 0;
     margin: 0;
 }
+/*----------------
+    COMMON
+-----------------*/
+.container {
+    max-width: 56.25rem;
+    height: 100vh;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.items {
+    position: relative;
+    width: 43.75rem;
+    height: 18.75rem;
+}
+.box-item {
+    height: 100%;
+    display: none;
+}
+.box-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+/*----------------
+    COMPONENTS
+-----------------*/
+.previous, .next {
+    position: absolute;
+    height: 1.25rem;
+    width: 1.25rem;
+    border-radius: 50%;
+    background-color: #cbc7c6;
+    line-height: 1.25rem;
+    text-align: center;
+    margin: .625rem 0;
+    left: 50%;
+    transform: translate(-50%);
+    cursor: pointer;
+    z-index: 100;
+}
+.previous {
+    top: 0;
+}
+.next {
+    bottom: 0;
+}
+.active {
+    display: block;
+}
